k8s/apps/02-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
  namespace: loh-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      nodeSelector:
        role: gateway # deploy to node with gateway label.
      containers:
        - name: gateway
          image: fhuadeen/loh-main:prod
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m #100m
              memory: 1Gi #256Mi
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-srv
  namespace: loh-apps
spec:
  selector:
    app: gateway
  ports:
    - name: gateway
      protocol: TCP
      port: 5000
      targetPort: 5000
