k8s/apps/04-inventory.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-depl
  namespace: loh-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      nodeSelector:
        role: inventory # deploy to node with inventory label
      containers:
        - name: inventory
          image: fhuadeen/loh-inventory:prod
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-srv
  namespace: loh-apps
spec:
  selector:
    app: inventory
  ports:
    - name: inventory
      protocol: TCP
      port: 5001
      targetPort: 5001
