k8s/apps/05-oms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oms-depl
  namespace: loh-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oms
  template:
    metadata:
      labels:
        app: oms
    spec:
      nodeSelector:
        role: oms # deploy to node with oms label
      containers:
        - name: oms
          image: fhuadeen/loh-oms:prod
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: oms-srv
  namespace: loh-apps
spec:
  selector:
    app: oms
  ports:
    - name: oms
      protocol: TCP
      port: 5002
      targetPort: 5002
