k8s/apps/06-payment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
  namespace: loh-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      nodeSelector:
        role: payment # deploy to node with payment label
      containers:
        - name: payment
          image: fhuadeen/loh-payment:prod
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
  namespace: loh-apps
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 5003
      targetPort: 5003
