k8s/apps/07-notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-depl
  namespace: loh-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      nodeSelector:
        role: notification # deploy to node with notification label
      containers:
        - name: notification
          image: fhuadeen/loh-notification:prod
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: notification-srv
  namespace: loh-apps
spec:
  selector:
    app: notification
  ports:
    - name: notification
      protocol: TCP
      port: 5004
      targetPort: 5004
