k8s/apps/08-ai.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-depl
  namespace: loh-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai
  template:
    metadata:
      labels:
        app: ai
    spec:
      nodeSelector:
        role: ai # deploy to node with ai label
      containers:
        - name: ai
          image: fhuadeen/loh-ai:prod
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: ai-srv
  namespace: loh-apps
spec:
  selector:
    app: ai
  ports:
    - name: ai
      protocol: TCP
      port: 5002
      targetPort: 5002
