k8s/apps/03-loh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loh-ingress
  namespace: loh-apps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: "loh-bookstore.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gateway-srv
                port:
                  number: 5000
